  See features.conf for details.
* enhancement: Add a new entry Link Info under Link main menu.
* enhancement: Indicate backgrounded downloads using an unused led.
* enhancement: Display the number of ECMAScript interpreters that have
  been allocated for documents in the Resources dialog.
* Fedora enhancement 346861: Add support for nss_compat_ossl library
  (OpenSSL replacement).
* enhancement 1075: Scrolling the entire contents of dialog boxes.
  Especially useful for multi-file BitTorrent downloads.
* Report if the Lua function edit_bookmark_dialog receives the wrong
  number or types of arguments instead of silently failing.

//////////////////////////////////////////////////////////////////////
The following changes should be removed from NEWS before ELinks 0.13.0
is released.  They are currently listed here just to show that they
have already been considered.

* Fixed bugs that were not in previous versions:
  - critical bug 1009: assertion failure in add_snippets()
    (mostly reverted)
//////////////////////////////////////////////////////////////////////

ELinks 0.12pre3.GIT now:
------------------------

To be released as 0.12pre4, 0.12rc1, or even 0.12.0.

* critical bug 1071: Fix crash in get_dom_node_child.

ELinks 0.12pre3:
----------------

Released on 2009-03-29.  This release also included the changes listed
under ``ELinks 0.11.6'' below.

Incompatibilities:

* bug 1060: Regexp searching now requires the TRE library.
* lzma disabled by default. It's rarely used and doesn't build with new xz.

Other changes:

* critical: Fix assertion failure if IMG/@usemap refers to a different
  file.
* Preserve newlines in hidden input fields, and submit them as CRLF.
  Previously, they could turn into spaces or disappear entirely.
* Perl scripts can use modules that dynamically load C libraries, like
  XML::LibXML::SAX does.
* bug 153: Preserve Unicode characters in XBEL bookmark files.
  However, Unicode in URIs (really IRIs) does not work reliably yet;