@@ -56,6 +56,7 @@ Miscellaneous:
   been allocated for documents in the Resources dialog.
 * Fedora enhancement 346861: Add support for nss_compat_ossl library
   (OpenSSL replacement).
+* enhancement 1070: Support 256 colors on fbterm-1.4.
 * enhancement 1075: Scrolling the entire contents of dialog boxes.
   Especially useful for multi-file BitTorrent downloads.
 * Report if the Lua function edit_bookmark_dialog receives the wrong
